# boolexpr

./: .gitignore  CMakeLists.txt  bruteforce.cpp  bruteforce.hpp  builtin.hpp  compiler.cpp  compiler.hpp  constants.hpp  format.sh  lexer.cpp  lexer.hpp  main.cpp  operation.hpp  program.cpp  program.hpp  truth_table.cpp  truth_table.hpp  truth_tables.txt  util.hpp
